--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-et<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="fr">
 	<head>
@@ -247,6 +247,7 @@ et<!DOCTYPE html>
 		</script>
 	</body>
 </html>
+
 
 
 
