--- a/index.html
+++ b/index.html
@@ -24,168 +24,167 @@
 			<div id="films"></div>
 		</main>
 		<script>
-			fetch("films.json")
-				.then((response) => response.json())
-				.then((data) => {
-					const legendContainer = document.getElementById("legende");
-					data.legende.forEach((attr) => {
-						const wrapper = document.createElement("span");
+		function cleanFilmContent(film) {
+    		const motsCles = [
+        		"Déconseillé aux jeunes enfants",
+        		"Erostisme",
+        		"Exempte de classement",
+        		"Violence",
+        		"Horreur",
+        		"Langage Vulgaire",
+        		"Pour Enfants",
+        		"Sexualité Explicite"
+    		];
 
-						const badge = document.createElement("span");
-						badge.className = "badge";
-						badge.textContent = attr.ShortName;
-						//badge.style.color = attr.FontColor;
-						//badge.style.backgroundColor = attr.BackgroundColor;
+    		let contentOriginal = film.content || "";
+    		let contentRestant = contentOriginal;
 
-						const description = document.createElement("span");
-						description.textContent = attr.Description;
+    		// Supprimer les mots-clés du contenu restant
+    		motsCles.forEach(mot => {
+        		const regex = new RegExp(`\\s*\\|?\\s*${mot}\\s*\\|?\\s*`, "gi");
+        		contentRestant = contentRestant.replace(regex, " ");
+    		});
 
-						wrapper.appendChild(badge);
-						wrapper.appendChild(description);
-						legendContainer.appendChild(wrapper);
-					});
+    		// Nettoyer les séparateurs et espaces
+    		contentRestant = contentRestant
+        		.replace(/\s*\|\s*/g, " | ")
+        		.replace(/\s{2,}/g, " ")
+        		.trim();
 
-					const container = document.getElementById("films");
-					data.films.forEach((film) => {
-						const card = document.createElement("div");
-						card.className = "card";
+    		// Formatage de la durée
+    		let dureeFormatee = "";
+    		if (film.duree && !isNaN(film.duree)) {
+        		const heures = Math.floor(film.duree / 60);
+        		const minutes = film.duree % 60;
+        		dureeFormatee = `Durée ${heures}h${minutes.toString().padStart(2, "0")}`;
+    		}
 
-						const poster = document.createElement("div");
-						poster.className = "poster";
-						if (film.thumbnail) {
-							const img = document.createElement("img");
-							img.src = film.thumbnail;
-							img.alt = `Affiche de ${film.titre}`;
-							poster.appendChild(img);
-						}
-						card.appendChild(poster);
+    		const parts = [];
+    		if (film.classification) parts.push(film.classification);
+    		if (dureeFormatee) parts.push(dureeFormatee);
+    		if (contentRestant) parts.push(contentRestant);
 
-						const details = document.createElement("div");
-						const title = document.createElement("h1");
-						//title.className = "title";
-						title.textContent = film.titre;
-						details.appendChild(title);
+    		return parts.join(" | ");
+			}
+	
+			// Génération du nom de fichier image
+			function generateImageFilename(film) {
+    			function normalizeText(text) {
+        			return text
+            			.normalize("NFD")
+            			.replace(/[\u0300-\u036f]/g, "")
+            			.replace(/\s+/g, "")
+            			.replace(/[^a-zA-Z0-9+]/g, "");
+    		}
 
-						if (film.classification || film.content) {
-							const contentBlock = document.createElement("div");
+    		let base = normalizeText(film.classification || "");
 
-    						if (film.classification) {
-        						const rating = document.createElement("span");
-        						rating.className = "rating";
-        						rating.textContent = `${film.classification} `;
-        						contentBlock.appendChild(rating);
-    						}
-
-    						if (film.content) {
-        						const content = document.createElement("span");
-        						content.className = "content";
-        						content.textContent = ` ${film.content}`;
-        						contentBlock.appendChild(content);
-    						}
-
-  							// Génération du nom de fichier
-							function generateImageFilename(film) {
-    							function normalizeText(text) {
-        							return text
-            							.normalize("NFD")
-            							.replace(/[\u0300-\u036f]/g, "")
-            							.replace(/\s+/g, "")
-            							.replace(/[^a-zA-Z0-9+]/g, "");
-    						}
-
-						    let base = normalizeText(film.classification || "");
-    						const motsCles = [
-        						"Déconseillé aux jeunes enfants",
-        						"Erostisme",
-        						"Exempte de classement",
-        						"Violence",
-        						"Horreur",
-        						"Langage Vulgaire",
-        						"Pour Enfants",
-        						"Sexualité Explicite"
-    						];
-
-    						let contentOriginal = film.content || "";
-    						let contentRestant = contentOriginal;
-
-						    // Supprimer les mots-clés du contenu restant
-    						motsCles.forEach(mot => {
-        						const regex = new RegExp(`\\s*\\|?\\s*${mot}\\s*\\|?\\s*`, "gi");
-        						contentRestant = contentRestant.replace(regex, " ");
-    						});
-
-    						// Nettoyer les séparateurs et espaces
-    						contentRestant = contentRestant
-        						.replace(/\s*\|\s*/g, " | ")
-        						.replace(/\s{2,}/g, " ")
-        						.trim();
-
-    						// Formatage de la durée
-    						let dureeFormatee = "";
-    						if (film.duree && !isNaN(film.duree)) {
-        						const heures = Math.floor(film.duree / 60);
-        						const minutes = film.duree % 60;
-        						dureeFormatee = `Durée ${heures}h${minutes.toString().padStart(2, "0")}`;
-    						}
-
-    						// Construction finale
-    						const parts = [];
-    						if (film.classification) parts.push(film.classification);
-    						if (dureeFormatee) parts.push(dureeFormatee);
-    						if (contentRestant) parts.push(contentRestant);
-
-    						return parts.join(" | ");
-						}		
+    		if (film.content) {
+        		motsCles.forEach(mot => {
+            		if (film.content.includes(mot)) {
+                		base += normalizeText(mot);
+            		}
+        	});
+    	}
+    	return base + "RGB.jpg";
+	}
 		
-    					const filename = base + "RGB.jpg";
-    					console.log("Nom de fichier image généré :", filename);
-    					return filename;
-						}
+	fetch("films.json")
+    	.then((response) => response.json())
+    	.then((data) => {
+        	const legendContainer = document.getElementById("legende");
+        	data.legende.forEach((attr) => {
+            	const wrapper = document.createElement("span");
 
-    					// Création et insertion de l'image
-    					const imageFilename = generateImageFilename(film);
-    					const image = document.createElement("img");
-    					image.src = `classification/${imageFilename}`; // Chemin relatif à ton dossier
-    					image.alt = "Classification visuelle";
-    					image.className = "classification-image"; // Pour styliser si besoin
+            	const badge = document.createElement("span");
+            	badge.className = "badge";
+            	badge.textContent = attr.ShortName;
 
-						poster.appendChild(image);
-						details.appendChild(contentBlock);
-						}
+            	const description = document.createElement("span");
+            	description.textContent = attr.Description;
 
-						if (film.synopsis) {
-							const synopsis = document.createElement("div");
-							synopsis.className = "synopsis";
-							synopsis.textContent = film.synopsis;
-							details.appendChild(synopsis);
-						}
+            	wrapper.appendChild(badge);
+            	wrapper.appendChild(description);
+            	legendContainer.appendChild(wrapper);
+        	});
 
-						const seancesDiv = document.createElement("div");
-						seancesDiv.className = "seances";
+        	const container = document.getElementById("films");
+        	data.films.forEach((film) => {
+            	const card = document.createElement("div");
+            	card.className = "card";
 
-						// Grouper les séances par date
-						const seancesParDate = {};
+            const poster = document.createElement("div");
+            poster.className = "poster";
+            if (film.thumbnail) {
+                const img = document.createElement("img");
+                img.src = film.thumbnail;
+                img.alt = `Affiche de ${film.titre}`;
+                poster.appendChild(img);
+            }
+            card.appendChild(poster);
 
-						film.horaire
-							.sort((a, b) => (a.horaire < b.horaire ? -1 : 1))
-							.forEach((seance) => {
-								const parts = seance.horaire.trim().split(" ");
-								const dateStr = parts[0]; // format YYYY-MM-DD
-								const heure = parts[1];
-								const attributs = parts
-									.slice(2)
-									.filter((item) => item.length > 0)
-									.sort((a, b) => (a < b ? -1 : 1));
+            const details = document.createElement("div");
+            const title = document.createElement("h1");
+            title.textContent = film.titre;
+            details.appendChild(title);
 
-								if (!seancesParDate[dateStr]) {
-									seancesParDate[dateStr] = [];
-								}
+            if (film.classification || film.content) {
+                const contentBlock = document.createElement("div");
 
-								seancesParDate[dateStr].push({
-									heure,
-									attributs,
-								});
-							});
+                const cleanedContent = cleanFilmContent(film);
+
+                const content = document.createElement("span");
+                content.className = "content";
+                content.textContent = cleanedContent;
+                contentBlock.appendChild(content);
+
+                const imageFilename = generateImageFilename(film);
+                const image = document.createElement("img");
+                image.src = `classification/${imageFilename}`;
+                image.alt = "Classification visuelle";
+                image.className = "classification-image";
+
+                poster.appendChild(image);
+                details.appendChild(contentBlock);
+            }
+
+            if (film.synopsis) {
+                const synopsis = document.createElement("div");
+                synopsis.className = "synopsis";
+                synopsis.textContent = film.synopsis;
+                details.appendChild(synopsis);
+            }
+
+            card.appendChild(details);
+            container.appendChild(card);
+
+
+			const seancesDiv = document.createElement("div");
+			seancesDiv.className = "seances";
+
+			// Grouper les séances par date
+			const seancesParDate = {};
+
+			film.horaire
+				.sort((a, b) => (a.horaire < b.horaire ? -1 : 1))
+				.forEach((seance) => {
+					const parts = seance.horaire.trim().split(" ");
+					const dateStr = parts[0]; // format YYYY-MM-DD
+					const heure = parts[1];
+					const attributs = parts
+						.slice(2)
+						.filter((item) => item.length > 0)
+								.sort((a, b) => (a < b ? -1 : 1));
+
+					if (!seancesParDate[dateStr]) {
+							seancesParDate[dateStr] = [];
+					}
+
+					seancesParDate[dateStr].push({
+						heure,
+						attributs,
+					});
+				});
 
 						// Afficher les séances regroupées
 						Object.entries(seancesParDate).forEach(([dateStr, seances]) => {
@@ -243,6 +242,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
