--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
 
             card.appendChild(details);
             container.appendChild(card);
-
-
+    	}); // ✅ fermeture du forEach
+			
 			const seancesDiv = document.createElement("div");
 			seancesDiv.className = "seances";
 
@@ -242,6 +242,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
