--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@
 			<div id="films"></div>
 		</main>
 		<script>
-		function cleanFilmContent(film) {
-    		const motsCles = [
-        		"Déconseillé aux jeunes enfants",
-        		"Erostisme",
-        		"Exempte de classement",
-        		"Violence",
-        		"Horreur",
-        		"Langage Vulgaire",
-        		"Pour Enfants",
-        		"Sexualité Explicite"
-    		];
+		<script>
+		// ✅ Définition unique des mots-clés
+		const motsCles = [
+    		"Déconseillé aux jeunes enfants",
+    		"Erostisme",
+    		"Exempte de classement",
+    		"Violence",
+    		"Horreur",
+    		"Langage Vulgaire",
+    		"Pour Enfants",
+    		"Sexualité Explicite"
+		];
 
+		// ✅ Nettoyage du contenu
+		function cleanFilmContent(film) {
     		let contentOriginal = film.content || "";
     		let contentRestant = contentOriginal;
 
@@ -57,24 +60,24 @@
         		const heures = Math.floor(film.duree / 60);
         		const minutes = film.duree % 60;
         		dureeFormatee = `Durée ${heures}h${minutes.toString().padStart(2, "0")}`;
-    		}
+    		}		
 
-    		const parts = [];
+   			const parts = [];
     		if (film.classification) parts.push(film.classification);
     		if (dureeFormatee) parts.push(dureeFormatee);
     		if (contentRestant) parts.push(contentRestant);
 
     		return parts.join(" | ");
 			}
-	
-			// Génération du nom de fichier image
+
+			// ✅ Génération du nom de fichier image
 			function generateImageFilename(film) {
     			function normalizeText(text) {
         			return text
             			.normalize("NFD")
             			.replace(/[\u0300-\u036f]/g, "")
             			.replace(/\s+/g, "")
-            			.replace(/[^a-zA-Z0-9+]/g, "");
+            		.replace(/[^a-zA-Z0-9+]/g, "");
     		}
 
     		let base = normalizeText(film.classification || "");
@@ -84,28 +87,30 @@
             		if (film.content.includes(mot)) {
                 		base += normalizeText(mot);
             		}
-        	});
-    	}
-    	return base + "RGB.jpg";
-	}
-		
-	fetch("films.json")
-    	.then((response) => response.json())
-    	.then((data) => {
-        	const legendContainer = document.getElementById("legende");
-        	data.legende.forEach((attr) => {
-            	const wrapper = document.createElement("span");
+        		});
+    		}
 
-            	const badge = document.createElement("span");
-            	badge.className = "badge";
-            	badge.textContent = attr.ShortName;
+    		return base + "RGB.jpg";
+		}
 
-            	const description = document.createElement("span");
-            	description.textContent = attr.Description;
+		// ✅ Chargement des données
+		fetch("films.json")
+    		.then((response) => response.json())
+    		.then((data) => {
+        		const legendContainer = document.getElementById("legende");
+        		data.legende.forEach((attr) => {
+            		const wrapper = document.createElement("span");
 
-            	wrapper.appendChild(badge);
-            	wrapper.appendChild(description);
-            	legendContainer.appendChild(wrapper);
+            		const badge = document.createElement("span");
+            		badge.className = "badge";
+            		badge.textContent = attr.ShortName;
+
+            		const description = document.createElement("span");
+            		description.textContent = attr.Description;
+
+            		wrapper.appendChild(badge);
+            		wrapper.appendChild(description);
+            		legendContainer.appendChild(wrapper);
         	});
 
         	const container = document.getElementById("films");
@@ -113,51 +118,51 @@
             	const card = document.createElement("div");
             	card.className = "card";
 
-            const poster = document.createElement("div");
-            poster.className = "poster";
-            if (film.thumbnail) {
-                const img = document.createElement("img");
-                img.src = film.thumbnail;
-                img.alt = `Affiche de ${film.titre}`;
-                poster.appendChild(img);
-            }
-            card.appendChild(poster);
+            	const poster = document.createElement("div");
+            	poster.className = "poster";
+            	if (film.thumbnail) {
+                	const img = document.createElement("img");
+                	img.src = film.thumbnail;
+                	img.alt = `Affiche de ${film.titre}`;
+                	poster.appendChild(img);
+            	}
+            	card.appendChild(poster);
 
-            const details = document.createElement("div");
-            const title = document.createElement("h1");
-            title.textContent = film.titre;
-            details.appendChild(title);
+            	const details = document.createElement("div");
+            	const title = document.createElement("h1");
+            	title.textContent = film.titre;
+            	details.appendChild(title);
 
-            if (film.classification || film.content) {
-                const contentBlock = document.createElement("div");
+            	if (film.classification || film.content) {
+                	const contentBlock = document.createElement("div");
 
-                const cleanedContent = cleanFilmContent(film);
+                	const cleanedContent = cleanFilmContent(film);
 
-                const content = document.createElement("span");
-                content.className = "content";
-                content.textContent = cleanedContent;
-                contentBlock.appendChild(content);
+                	const content = document.createElement("span");
+                	content.className = "content";
+                	content.textContent = cleanedContent;
+                	contentBlock.appendChild(content);
 
-                const imageFilename = generateImageFilename(film);
-                const image = document.createElement("img");
-                image.src = `classification/${imageFilename}`;
-                image.alt = "Classification visuelle";
-                image.className = "classification-image";
+                	const imageFilename = generateImageFilename(film);
+                	const image = document.createElement("img");
+                	image.src = `classification/${imageFilename}`;
+                	image.alt = "Classification visuelle";
+                	image.className = "classification-image";
 
-                poster.appendChild(image);
-                details.appendChild(contentBlock);
-            }
+                	poster.appendChild(image);
+                	details.appendChild(contentBlock);
+           		 }
 
-            if (film.synopsis) {
-                const synopsis = document.createElement("div");
-                synopsis.className = "synopsis";
-                synopsis.textContent = film.synopsis;
-                details.appendChild(synopsis);
-            }
+            	if (film.synopsis) {
+                	const synopsis = document.createElement("div");
+                	synopsis.className = "synopsis";
+                	synopsis.textContent = film.synopsis;
+                	details.appendChild(synopsis);
+            	}
 
-            card.appendChild(details);
-            container.appendChild(card);
-    	}); // ✅ fermeture du forEach
+            	card.appendChild(details);
+            	container.appendChild(card);
+        	});
 			
 			const seancesDiv = document.createElement("div");
 			seancesDiv.className = "seances";
@@ -242,6 +247,7 @@
 		</script>
 	</body>
 </html>
+
 
 
 
