--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </header>
 <main>
 <div id="legende"></div>
+<p class="textlegende">*Vente de billets au cinéma seulement, aucune réservation</p>
 <div id="films"></div>
 </main>
 <script>
@@ -228,4 +229,5 @@
 		</script>
 </body>
 </html>
+
 
