--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 			// ✅ Définition unique des mots-clés
 			const motsCles = ["Déconseillé aux jeunes enfants", "Erostisme", "Exempte de classement", "Violence", "Horreur", "Langage Vulgaire", "Pour Enfants", "Sexualité Explicite"];
 			const ratingDescriptions = {
-				"13+": "12 ans - | DOIT ÊTRE ACCOMPAGNÉ PAR UN ADULTE",
-				"16+": "Le film peut être vu uniquement par des personnes de 16 ans ou plus",
-				"18+": "Le film peut être vu uniquement par des personnes de 18 ans ou plus",
-				"Pour Enfants": "Pour Enfants:\n  Le film convient aux jeunes enfants, particulièrement à ceux d’âge préscolaire.",
-				"Déconseillé aux jeunes enfants": "Déconseillé aux jeunes enfants:\n  Le film peut être vu par des personnes de tout âge.\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
+				"13+": "\r\n 12 ans - | DOIT ÊTRE ACCOMPAGNÉ PAR UN ADULTE",
+				"16+": "\r\n Le film peut être vu uniquement par des personnes de 16 ans ou plus",
+				"18+": "\r\n Le film peut être vu uniquement par des personnes de 18 ans ou plus",
+				"Pour Enfants": "\r\n Le film convient aux jeunes enfants, particulièrement à ceux d’âge préscolaire.",
+				"Déconseillé aux jeunes enfants": "\r\n  Le film peut être vu par des personnes de tout âge.\r\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
 			};
 
 			// ✅ Nettoyage du contenu
@@ -265,3 +265,4 @@
 		</script>
 	</body>
 </html>
+
