--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 			// ✅ Définition unique des mots-clés
 			const motsCles = ["Déconseillé aux jeunes enfants", "Erostisme", "Exempte de classement", "Violence", "Horreur", "Langage Vulgaire", "Pour Enfants", "Sexualité Explicite"];
 			const ratingDescriptions = {
-				"13+": "<br>12 ans - | DOIT ÊTRE ACCOMPAGNÉ PAR UN ADULTE",
-				"16+": "<br>Le film peut être vu uniquement par des personnes de 16 ans ou plus",
-				"18+": "<br>Le film peut être vu uniquement par des personnes de 18 ans ou plus",
-				"Pour Enfants": "<br>Le film convient aux jeunes enfants, particulièrement à ceux d’âge préscolaire.",
-				"Déconseillé aux jeunes enfants": "<br>Le film peut être vu par des personnes de tout âge.\r\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
+				"13+": "12 ans - | DOIT ÊTRE ACCOMPAGNÉ PAR UN ADULTE",
+				"16+": "Le film peut être vu uniquement par des personnes de 16 ans ou plus",
+				"18+": "Le film peut être vu uniquement par des personnes de 18 ans ou plus",
+				"Pour Enfants": "Le film convient aux jeunes enfants, particulièrement à ceux d’âge préscolaire.",
+				"Déconseillé aux jeunes enfants": "Le film peut être vu par des personnes de tout âge.\n Des passages peuvent perturber les enfants de moins de 8 ans.",
 			};
 
 			// ✅ Nettoyage du contenu
@@ -265,5 +265,6 @@
 		</script>
 	</body>
 </html>
+
 
 
