--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
 <script>
 			// ✅ Définition unique des mots-clés
 			const motsCles = ["Déconseillé aux jeunes enfants", "Erostisme", "Exempte de classement", "Violence", "Horreur", "Langage Vulgaire", "Pour Enfants", "Sexualité Explicite"];
-
+			const ratingDescriptions = {
+				"13+": "12 ans - | DOIT ÊTRE ACCOMPAGNÉ PAR UN ADULTE",
+				"16+": "Le film peut être vu uniquement par des personnes de 16 ans ou plus",
+				"18+": "Le film peut être vu uniquement par des personnes de 18 ans ou plus",
+				"Pour Enfants": "Pour Enfants:\n  Le film convient aux jeunes enfants, particulièrement à ceux d’âge préscolaire.",
+				"Déconseillé aux jeunes enfants": "Déconseillé aux jeunes enfants:\n  Le film peut être vu par des personnes de tout âge.\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
+			};
+	
 			// ✅ Nettoyage du contenu
 			function cleanFilmContent(film) {
 				if (film.content === undefined) return "";
@@ -119,13 +126,24 @@
 								contentBlock.appendChild(rating);
 
 								cleanedContent = ` | ${cleanedContent}`;
+								if (ratingDescriptions[film.classification]) {
+									classificationDetails = ratingDescriptions[film.classification];
+								}
 							}
+							
+							motsCles.forEach((motCle) => {
+								if (film.content.includes(motCle) && ratingDescriptions[motCle]) {
+									if (classificationDetails !== "") classificationDetails += "\n";
+									classificationDetails += ratingDescriptions[motCle];
+								}
+							});
 
 							const content = document.createElement("span");
 							content.className = "content";
 							content.textContent = cleanedContent;
 							contentBlock.appendChild(content);
 
+							const classification = document.createElement("div");
 							const imageFilename = generateImageFilename(film);
 							const image = document.createElement("img");
 							image.src = `classification/${imageFilename}`;
@@ -229,6 +247,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
