--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </header>
 <main>
 <div id="legende"></div>
-<p class="textlegende">*Vente de billets au cinéma seulement, aucune réservation</p>
+<p class="textlegende">*Vente de billets au cinéma seulement pour la séance en cours</p>
 <div id="films"></div>
 </main>
 <script>
@@ -254,6 +254,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
