--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				"13+": "12 ans - | DOIT ÊTRE ACCOMPAGNÉ PAR UN ADULTE",
 				"16+": "Le film peut être vu uniquement par des personnes de 16 ans ou plus",
 				"18+": "Le film peut être vu uniquement par des personnes de 18 ans ou plus",
-				"Pour Enfants": "Pour Enfants:\n  Le film convient aux jeunes enfants, particulièrement à ceux d’âge préscolaire.",
-				"Déconseillé aux jeunes enfants": "Déconseillé aux jeunes enfants:\n  Le film peut être vu par des personnes de tout âge.\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
+				"Pour Enfants": "Le film convient aux jeunes enfants, particulièrement à ceux d’âge préscolaire.",
+				"Déconseillé aux jeunes enfants": "Le film peut être vu par des personnes de tout âge.\n  Des passages peuvent perturber les enfants de moins de 8 ans.",
 			};
 	
 			// ✅ Nettoyage du contenu
@@ -254,6 +254,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
