--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <!-- Icône pour iOS / iPadOS -->
 <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon-180x180.png">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 <!-- Icônes Android / Chrome -->
 <link rel="icon" type="image/png" sizes="192x192" href="/favicons/android-chrome-192x192.png">
@@ -275,6 +276,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
