--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
 
 <!-- Icône pour iOS / iPadOS -->
-<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon-180x180.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon-180x180.png?v=2">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 <!-- Icônes Android / Chrome -->
@@ -276,6 +276,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
