--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </header>
 <main>
 <div id="legende"></div>
-<p class="textlegende">Vente de billets seulement au cinéma pour la séance courante seulement</p>
+<p class="textlegende">Vente de billets sur place seulement, pour la séance en cours, aux personnes présentes</p>
 <div id="films"></div>
 </main>
 <script>
@@ -276,6 +276,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
