--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 							// const jourLabel = document.createElement("div");
 							// jourLabel.className = "jour-label";
 
-							const aujourdHui = new Date().toISOString().split("T")[0]; // format YYYY-MM-DD
+							const aujourdHuiLocal = new Date().toLocaleDateString('fr-CA'); // format YYYY-MM-DD
 
 							const jourLabel = document.createElement("div");
 							jourLabel.className = "jour-label";
@@ -285,6 +285,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
