--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
 							// const jourLabel = document.createElement("div");
 							// jourLabel.className = "jour-label";
 
-							const aujourdHui = new Date().toISOString().split("T")[0]; // format YYYY-MM-DD
+							const aujourdHui = new Date().toLocaleDateString('fr-CA', {
+  								timeZone: 'America/Toronto' // fuseau horaire de Saint-Georges
+							});
 
 							const jourLabel = document.createElement("div");
 							jourLabel.className = "jour-label";
@@ -285,6 +287,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
