--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
 <div id="legende"></div>
 <p class="textlegende">Vente de billets sur place seulement, pour la séance en cours, aux personnes présentes</p>
 <div id="films"></div>
+<div id="videoModal" class="modal" style="display:none;">
+	<div class="modal-content">
+		<span id="closeModal" class="close">&times;</span>
+		<iframe id="trailerFrame" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+	</div>
+</div>
 </main>
 <script>
 			// ✅ Définition unique des mots-clés
@@ -298,6 +304,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
