--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 <p class="textlegende">Vente de billets sur place seulement, pour la séance en cours, aux personnes présentes</p>
 <div id="films"></div>
 <div id="videoModal" class="modal" style="display:none;">
-	<div class="modal-content">
-		<span id="closeModal" class="close">&times;</span>
-		<iframe id="trailerFrame" width="560" height="315" frameborder="0" allowfullscreen></iframe>
-	</div>
+  <div class="modal-content">
+    <span id="closeModal" class="close">&times;</span>
+    <div class="video-wrapper">
+      <iframe id="trailerFrame" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+  </div>
 </div>
 </main>
 <script>
@@ -327,6 +329,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
