--- a/index.html
+++ b/index.html
@@ -143,28 +143,34 @@
 
   							img.addEventListener("click", () => {
 	    						let videoId = null;
+  								let embedUrl = null;
 
-    							try {
-      								const urlObj = new URL(url);
+    						try {
+        						const urlObj = new URL(url);
 
-								    if (urlObj.hostname.includes("youtube.com") && urlObj.searchParams.get("v")) {
-      									videoId = urlObj.searchParams.get("v");
-    								} else if (urlObj.hostname.includes("youtu.be")) {
-      									videoId = urlObj.pathname.slice(1);
-   			 						}					
-  								} catch (e) {
-    								console.error("URL invalide :", url);
-  								}
+        						if (urlObj.hostname.includes("youtube.com") && urlObj.searchParams.get("v")) {
+            						videoId = urlObj.searchParams.get("v");
+            						embedUrl = `https://www.youtube.com/embed/${videoId}?autoplay=1`;
+        						} else if (urlObj.hostname.includes("youtu.be")) {
+            						videoId = urlObj.pathname.slice(1);
+            						embedUrl = `https://www.youtube.com/embed/${videoId}?autoplay=1`;
+        						} else if (urlObj.hostname.includes("vimeo.com")) {
+            						videoId = urlObj.pathname.split("/").pop();
+            						embedUrl = `https://player.vimeo.com/video/${videoId}?autoplay=1`;
+        						}
+    						} catch (e) {
+        						console.error("URL invalide :", url);
+    						}
 
-  								if (videoId) {
-    								const embedUrl = `https://www.youtube.com/embed/${videoId}?autoplay=1`;
-    								const trailerFrame = document.getElementById("trailerFrame");
-    								trailerFrame.src = embedUrl;
-    								document.getElementById("videoModal").style.display = "flex";
-  								} else {
-    								window.open(url, "_blank");
-  								}
-							});
+    						if (embedUrl) {
+        						const trailerFrame = document.getElementById("trailerFrame");
+        						trailerFrame.src = embedUrl;
+        						document.getElementById("videoModal").style.display = "flex";
+    						} else {
+        						window.open(url, "_blank");
+    						}
+						});
+
 						}
 				
   						poster.appendChild(img);
@@ -334,6 +340,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
