--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 							jourLabel.className = "jour-label";
 							if (dateStr === aujourdHui) {
   								jourLabel.classList.add("aujourd-hui");
-								jourBlock.classList.add("encadre-aujourd-hui"); // 👈 ajoute cette ligne
+								jourBlock.classList.add("encadre-aujourd-hui");
 							}
 
 							jourLabel.textContent = `${jour.toLowerCase()} ${jourNum}, ${mois.toLowerCase()}`;
@@ -341,6 +341,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
