--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
 
 							const jourLabel = document.createElement("div");
 							jourLabel.className = "jour-label";
+							const jourBlock = document.createElement("div");
+							jourBlock.className = "jour-block";
 							if (dateStr === aujourdHui) {
   								jourLabel.classList.add("aujourd-hui");
 								jourBlock.classList.add("encadre-aujourd-hui");
@@ -341,6 +343,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
