--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 <div id="legende"></div>
 <p class="textlegende">Vente de billets sur place seulement, pour la séance en cours, aux personnes présentes</p>
 <div id="films"></div>
+<div id="videoModal" class="modal" style="display:none;">
+  <div class="modal-content">
+    <span id="closeModal" class="close">&times;</span>
+    <div class="video-wrapper">
+      <iframe id="trailerFrame" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
 </main>
 <script>
 			// ✅ Définition unique des mots-clés
@@ -121,12 +129,53 @@
 
 						const poster = document.createElement("div");
 						poster.className = "poster";
+
+						// Utilise film.thumbnail si disponible
 						if (film.thumbnail) {
-							const img = document.createElement("img");
-							img.src = film.thumbnail;
-							img.alt = `Affiche de ${film.titre}`;
-							poster.appendChild(img);
+  							const img = document.createElement("img");
+  							img.src = film.thumbnail;
+  							img.alt = `Affiche de ${film.titre}`;
+  							img.style.cursor = "pointer";
+
+  						// Vérifie si bande_annonce est définie et non vide
+						if (film.bande_annonce && film.bande_annonce.trim() !== "") {
+  							const url = film.bande_annonce.trim();
+
+  							img.addEventListener("click", () => {
+	    						let videoId = null;
+  								let embedUrl = null;
+
+    						try {
+        						const urlObj = new URL(url);
+
+        						if (urlObj.hostname.includes("youtube.com") && urlObj.searchParams.get("v")) {
+            						videoId = urlObj.searchParams.get("v");
+            						embedUrl = `https://www.youtube.com/embed/${videoId}?autoplay=1`;
+        						} else if (urlObj.hostname.includes("youtu.be")) {
+            						videoId = urlObj.pathname.slice(1);
+            						embedUrl = `https://www.youtube.com/embed/${videoId}?autoplay=1`;
+        						} else if (urlObj.hostname.includes("vimeo.com")) {
+            						videoId = urlObj.pathname.split("/").pop();
+            						embedUrl = `https://player.vimeo.com/video/${videoId}?autoplay=1`;
+        						}
+    						} catch (e) {
+        						console.error("URL invalide :", url);
+    						}
+
+    						if (embedUrl) {
+        						const trailerFrame = document.getElementById("trailerFrame");
+        						trailerFrame.src = embedUrl;
+        						document.getElementById("videoModal").style.display = "flex";
+    						} else {
+        						window.open(url, "_blank");
+    						}
+						});
+
 						}
+				
+  						poster.appendChild(img);
+						}			
+
 						card.appendChild(poster);
 
 						const details = document.createElement("div");
@@ -284,9 +333,20 @@
 				.catch((error) => {
 					console.error("Erreur lors du chargement du fichier films.json :", error);
 				});
+			document.getElementById("closeModal").addEventListener("click", () => {
+				document.getElementById("videoModal").style.display = "none";
+	  			document.getElementById("trailerFrame").src = ""; // stop video
+			});
 		</script>
 </body>
 </html>
+
+
+
+
+
+
+
 
 
 
